--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -1,5 +1,5 @@
 #loader-img-uml {
-  --front-color: #e536ab;
+  --front-color: #5c03bc;
   --back-color: lightgray;
   width: 64px;
   height: 64px;
