--- a/assets/css/code_mirror.css
+++ b/assets/css/code_mirror.css
@@ -3,6 +3,7 @@
   height: 300px!important;
   font-size: 16px;
   border-radius: 20px;
-  border: 2px solid var(--bs-body-color);
+  /*border: 2px solid var(--bs-body-color);*/
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
