--- a/assets/css/code_mirror.css
+++ b/assets/css/code_mirror.css
@@ -2,8 +2,8 @@
   width: 100%;
   height: 300px!important;
   font-size: 16px;
+  border: solid 2px #00ff00;
   border-radius: 20px;
-  /*border: 2px solid var(--bs-body-color);*/
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
 }
 
